--- a/06company/css/style.css
+++ b/06company/css/style.css
@@ -513,12 +513,12 @@ body {
 
 
 
-.contents3{margin: 80px auto;}
+/* .contents3{margin: 80px auto;}
 
 .contents3>ul{width: 1320px;background-color: pink; margin: 80px auto;
 display: flex;flex-wrap: wrap;}
 .contents3>ul>li{background-color: orange;height: 660px;flex-grow: 1;flex-basis: 25%;}
-.contents3>ul>li:nth-child(1){background: #2E4D8E;}
+.contents3>ul>li:nth-child(1){background: #2E4D8E;} */
 
 /********** css responsive **********/
 @media (max-width: 1600px) {
