--- a/06company/css/style.css
+++ b/06company/css/style.css
@@ -386,6 +386,10 @@ body {
     width: 660px;
 }
 
+
+
+
+
 .contents2 .videoWrap {
     width: 1320px;
     height: 740px;
@@ -726,7 +730,7 @@ body {
 
 @media (max-width: 816px) {
     .bx-viewport {
-        height: 100% !important;
+        height: 740px !important;
     }
 
     #header {
@@ -1221,7 +1225,7 @@ body {
 
     .contents4 {
         
-        width: 800px;
+        width: 100%;
         height: 330px;
         margin: 0 auto;
         margin-bottom: 80px;
