--- a/08fullpage/css/style.css
+++ b/08fullpage/css/style.css
@@ -908,16 +908,59 @@ video {
     background-position-x: 320px
 }
 
+.class_tap>ul>li {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    animation: class_ani1 1s alternate
+}
+
+.class_tap>ul>li>video {
+
+    animation: class_ani2 2s alternate
+}
+
+.skill_wrap {
+    animation: class_ani3 2s alternate
+}
+
+
+@keyframes class_ani1 {
+    0% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes class_ani2 {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes class_ani3 {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 
 .class_tap>ul>li{
     display: none;
 }
-
-.class_tap>ul>li:nth-child(1){
-    display: block;
-}
-
-
 
 
 .skill_wrap {
@@ -929,6 +972,7 @@ video {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .skill_wrap .skill_icon1 {
@@ -998,22 +1042,32 @@ video {
     background-image: url(../images/skill_list1.png);
     background-repeat: no-repeat;
 }
+
+.class_tap ul {
+    padding-left: 0;
+
+}
+
 .class_tap>ul>.tap_list:nth-child(2) .skill_btn::after {
     background-image: url(../images/skill_list2.png);
 
 }
+
 .class_tap>ul>.tap_list:nth-child(3) .skill_btn::after {
     background-image: url(../images/skill_list3.png);
 
 }
+
 .class_tap>ul>.tap_list:nth-child(4) .skill_btn::after {
     background-image: url(../images/skill_list4.png);
 
 }
+
 .class_tap>ul>.tap_list:nth-child(5) .skill_btn::after {
     background-image: url(../images/skill_list5.png);
 
 }
+
 .class_tap>ul>.tap_list:nth-child(6) .skill_btn::after {
     background-image: url(../images/skill_list6.png);
 
@@ -1061,4 +1115,189 @@ video {
     background-color: #9cb2e0;
     z-index: 100;
 
+}
+
+
+
+#page5 .game_info_wrap {
+    position: relative;
+    background-image: url(../images/bg05.jpg);
+    height: 100%;
+    
+}
+
+#page5 .game_info_wrap .tit {
+    background-image: url(../images/Title.png);
+}
+
+#page5 .game_info_wrap>button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 254px;
+    height: 254px;
+    background-image: url(../images/btn_map.png);
+    background-color: rgba(0, 0, 0, 0);
+    border: 0 solid #000;
+}
+#page5 .game_info_wrap>.map_btn1{
+    transform: translate(130px,92px);
+    
+    background-position-y: 254px;
+}
+#page5 .game_info_wrap>button:hover{
+    background-position-x: -254px;
+}
+#page5 .game_info_wrap>.map_btn3:hover{
+    background-position-x: -255px;
+}
+#page5 .game_info_wrap>.map_btn2{
+    transform: translate(-160px,82px);
+    background-position-y: 508px;
+}
+#page5 .game_info_wrap>.map_btn3{
+    transform: translate(-208px,-166px)
+}
+
+
+
+#page5.active .bg_cloud {
+    transition: 3.5s;
+}
+
+#page5 .cloud1 {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 1520px;
+    height: 796px;
+    background-image: url(../images/cloud01.png);
+}
+
+#page5 .cloud2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 1422px;
+    height: 796px;
+    background-image: url(../images/cloud02.png);
+}
+
+#page5 .cloud3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1520px;
+    height: 1002px;
+    background-image: url(../images/cloud03.png);
+}
+
+#page5 .cloud4 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1569px;
+    height: 947px;
+    background-image: url(../images/cloud04.png);
+}
+
+#page5.active .bg_cloud.cloud1 {
+    transform: translate(100%, 100%);
+}
+
+#page5.active .bg_cloud.cloud2 {
+    transform: translate(-100%, 100%);
+}
+
+#page5.active .bg_cloud.cloud3 {
+    transform: translate(-100%, -100%);
+}
+
+#page5.active .bg_cloud.cloud4 {
+    transform: translate(100%, -100%);
+}
+
+#page6{
+    background-image: url(../images/bg06.jpg);
+}
+
+#page6 .mySwiper2{
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1078px;
+    height: 500px;
+    transform: translate(-50%, -50%);
+    
+    
+   
+    
+}
+
+#page6 .mySwiper2 .media_slide{
+   
+    height: calc((100% - 30px) / 2);
+    cursor: pointer;
+    
+    
+
+}
+
+#page6 .mySwiper2 .media_slide>img{
+    width: 344px;
+    height: 197px;
+}
+
+.media-pager{
+    position: absolute;
+    bottom: 0px!important;
+    
+  
+}
+
+.media-pager span{
+
+    margin-right: 10px!important;
+}
+
+.swiper-button-next{
+    width: 100px;
+    height: 100px;
+    top: 45%;
+    right: 15%;
+    background-image: url(../images/btn_prev_icon_off.png);
+    transform: scaleX(-1);
+}
+.swiper-button-next:hover{
+    background-image: url(../images/btn_prev_icon_off.png);
+}
+.swiper-button-prev{
+    width: 100px;
+    height: 100px;
+    top: 45%;
+    left: 15%;
+    background-image: url(../images/btn_prev_icon_off.png);
+}
+
+:root {
+    --swiper-navigation-size: 0px;
+}
+
+
+#page6 .swiper-pagination span {
+    bottom: 0;
+    width: 20px;
+    height: 20px;
+    background: url(../images/nav_point_off.png) no-repeat;
+    background-repeat: no-repeat;
+    background-position: center;
+
+
+}
+#page6 .swiper-pagination .swiper-pagination-bullet-active {
+   
+    
+    background: url(../images/nav_point_on2.png) no-repeat;
+   
 }
